--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             max-width: 800px;
             line-height: 1.6;
         }
+        footer {
+            margin-top: auto;
+            padding: 20px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #888;
+        }
     </style>
 </head>
 <body>
@@ -80,6 +87,10 @@
 <div class="content">
     <p>Welcome to the Michael 9 Grant Fretaverse. Please select one of the interactive guitar tools above to get started.</p>
 </div>
+
+<footer>
+    <p>2025 &copy; Michael 9 Grant FRETAVERSE 2</p>
+</footer>
 
 </body>
 </html>
