--- a/scales_chords.html
+++ b/scales_chords.html
@@ -147,6 +147,13 @@
             .controls-container select {width: 100%; min-width: 120px;}
             .spelling-display { font-size: 0.85em; }
         }
+        footer {
+            margin-top: auto;
+            padding: 20px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #888;
+        }
     </style>
 </head>
 <body>
@@ -202,7 +209,10 @@
     <div id="spellingDisplayContainer" class="spelling-display">
         <p id="spellingText">Select a root and a scale or chord to see its spelling.</p>
     </div>
-</div>
+
+    <footer>
+        <p>2025 &copy; Michael 9 Grant FRETAVERSE 2</p>
+    </footer>
 
 <script>
     const allNoteDisplayElements = document.querySelectorAll('.note, .label.string-label');
