--- a/caged_system.html
+++ b/caged_system.html
@@ -302,6 +302,13 @@
                 justify-content: center;
             }
         }
+        footer {
+            margin-top: auto;
+            padding: 20px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #888;
+        }
     </style>
 </head>
 <body>
@@ -389,6 +396,11 @@
             <p>Practice playing these patterns to master both major and minor triad arpeggios across the entire fretboard!</p>
         </div>
     </div>
+    
+    <footer>
+        <p>2025 &copy; Michael 9 Grant FRETAVERSE 2</p>
+    </footer>
+
     <script>
         const SHAPES = {
             major: { C: [ [0, 3], [1, 1], [1, 3], [2, 2], [3, 0], [3, 2], [4, 1], [5, 3] ], A: [ [0, 0], [0, 2], [1, 2], [2, 2], [3, 2], [4, 0], [5, 2] ], G: [ [0, 3], [1, 2], [2, 0], [2, 2], [3, 1], [4, 3], [5, 2] ], E: [ [0, 0], [0, 2], [1, 2], [2, 1], [3, 2], [4, 0], [5, 2] ], D: [ [1, 3], [2, 2], [3, 0], [3, 2], [4, 1], [5, 3] ] },
